Speculatively fix the cmake build https://bugs.webkit.org/show_bug.cgi?id=157262

Reviewed by Darin Adler.

This patch adds WEB_TIMING build flag guards around calls to DOMWindow()->performance(),
in order to make sure builds that have WEB_TIMING disabled (e.g. cmake on Mac) continue
to build.

No new tests as there's no functional change.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::loadDone):


Canonical link: https://commits.webkit.org/175362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200324 268f45cc-cd09-0410-ab3c-d52691b4dbfc